# dejaq

./: LICENSE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: create_pdoc.yaml  publish_conda.yaml  publish_pypi.yml
conda/: meta.yaml
dejaq/: __init__.py  parallel.py  queues.py
