[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejaq"
version = "0.0.1"
description = "Déjà Q: A fast multiprocessing queue for Python"
authors = [
    { name = "jlab.berlin" },
    { name = "Benjamin Judkewitz"}
]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/danionella/dejaq"

[tool.setuptools.packages.find]
include = ["dejaq", "dejaq.*"]
