[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejaq"
version = "0.0.8"
description = "Déjà Queue – A fast multiprocessing queue for Python"
authors = [
    { name = "jlab.berlin" },
    { name = "Benjamin Judkewitz"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["multiprocessing", "queue", "shared_memory"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/danionella/dejaq"

[tool.setuptools.packages.find]
include = ["dejaq", "dejaq.*"]
